# 2048-tables

./: CMakeLists.txt  README.md  tables
src/lut/: lut.py  lut.txt
src/tablegen/: board.cpp  board.h  cache.h  interface.cpp  interface.h  main.cpp  table_generator.cpp  table_generator.h
